fixed the gap under user settings

--- a/user/user-settings.css
+++ b/user/user-settings.css
@@ -11,7 +11,7 @@
     margin-top: 0.5%;
     background-color: var(--secondary-hover);
     border-radius: 7px;
-    padding-bottom: 50%;
+    padding-bottom: 5%;
 }
 
 .settings-container {
